--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,10 +1,8 @@
-name: UnoPim Playwright Tests
+name: UnoPim + DAM + Playwright CI
 
 on:
   push:
-    branches: [master]
   pull_request:
-    branches: [master]
 
 jobs:
   test:
@@ -16,121 +14,93 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: unopim
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
         ports:
           - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -uroot -proot"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - name: Checkout repository
+      - name: Checkout UnoPim
         uses: actions/checkout@v4
+        with:
+          repository: unopim/unopim
+          path: unopim
 
-      - name: Check working directory
-        run: |
-          pwd
-          ls -la
-          echo "Current directory contents:"
-          ls -la
+      - name: Checkout DAM module
+        uses: actions/checkout@v4
+        with:
+          repository: kunal-webkul/unopim-digital-asset-management
+          path: unopim-dam
 
-      - name: Set up PHP
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
-          extensions: mbstring, bcmath, pdo_mysql, curl, fileinfo, gd, intl, openssl, tokenizer, zip
-          coverage: none
+          php-version: 8.2
+          extensions: mbstring, bcmath, pdo_mysql, fileinfo, curl, intl
           tools: composer:v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Copy or Create .env
+      - name: Install UnoPim
+        working-directory: unopim
         run: |
-          if [ -f .env.example ]; then
-            cp .env.example .env
-          else
-            echo "APP_NAME=UnoPim" > .env
-            echo "APP_ENV=testing" >> .env
-            echo "APP_KEY=" >> .env
-            echo "APP_DEBUG=true" >> .env
-            echo "APP_URL=http://127.0.0.1:8000" >> .env
-            echo "" >> .env
-            echo "DB_CONNECTION=mysql" >> .env
-            echo "DB_HOST=127.0.0.1" >> .env
-            echo "DB_PORT=3306" >> .env
-            echo "DB_DATABASE=unopim" >> .env
-            echo "DB_USERNAME=root" >> .env
-            echo "DB_PASSWORD=root" >> .env
-            echo "" >> .env
-            echo "CACHE_DRIVER=file" >> .env
-            echo "QUEUE_CONNECTION=sync" >> .env
-            echo "SESSION_DRIVER=file" >> .env
-            echo "SESSION_LIFETIME=120" >> .env
-          fi
-          cat .env
-
-      - name: Install PHP dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Check for artisan file
-        run: |
-          echo "Looking for artisan file..."
-          find . -name "artisan" -type f
-          if [ ! -f artisan ]; then
-            echo "ERROR: artisan file not found in current directory!"
-            echo "Current directory: $(pwd)"
-            echo "Directory contents:"
-            ls -la
-            exit 1
-          fi
-
-      - name: Generate key and migrate
-        run: |
+          composer install
+          cp .env.example .env
+          sed -i "s|^APP_ENV=.*|APP_ENV=testing|" .env
+          sed -i "s|^DB_HOST=.*|DB_HOST=127.0.0.1|" .env
+          sed -i "s|^DB_PORT=.*|DB_PORT=3306|" .env
+          sed -i "s|^DB_DATABASE=.*|DB_DATABASE=unopim|" .env
+          sed -i "s|^DB_USERNAME=.*|DB_USERNAME=root|" .env
+          sed -i "s|^DB_PASSWORD=.*|DB_PASSWORD=root|" .env
           php artisan key:generate
-          php artisan migrate:fresh --seed --force
+          php artisan migrate --force
 
-      - name: Install DAM module
-        run: composer require unopim/dam
-
-      - name: Build frontend
+      - name: Install DAM module manually
+        working-directory: unopim
         run: |
-          npm ci
-          npm run build
+          mkdir -p packages/Webkul
+          cp -r ../unopim-dam/src packages/Webkul/DAM
+          composer config repositories.dam '{"type": "path", "url": "packages/Webkul/DAM"}'
+          composer dump-autoload
+          php artisan optimize:clear
+          php artisan vendor:publish --provider="Webkul\\DAM\\Providers\\DAMServiceProvider"
 
-      - name: Start Laravel server in background
-        run: |
-          php artisan serve --host=127.0.0.1 --port=8000 > server.log 2>&1 &
-          echo $! > server.pid
+      - name: Serve UnoPim instance
+        working-directory: unopim
+        run: php artisan serve --host=0.0.0.0 --port=8000 &
 
-      - name: Wait for Laravel admin login page
+      - name: Wait for UnoPim to be ready
         run: |
-          npx wait-on http://127.0.0.1:8000/admin/login --timeout 30000
+          npx wait-on http://127.0.0.1:8000 --timeout 60000
           sleep 5
 
-      - name: Install Playwright
-        run: npm install -g @playwright/test
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Run Playwright Tests
-        run: npx playwright test --reporter=list,html --timeout=60000
-
-      - name: Stop Laravel server
-        if: always()
+      - name: Install Playwright dependencies
+        working-directory: unopim/tests/e2e-pw
         run: |
-          if [ -f server.pid ]; then
-            kill $(cat server.pid) 2>/dev/null || true
-            rm -f server.pid
-          fi
+          npm install
+          npx playwright install-deps chromium
+          npx playwright install chromium
+
+      - name: Run Playwright tests
+        working-directory: unopim/tests/e2e-pw
+        run: npx playwright test --reporter=html
 
       - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report/
+          path: unopim/tests/e2e-pw/playwright-report
+
+      - name: Upload Laravel logs if failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: laravel-logs
+          path: unopim/storage/logs/laravel.log
